--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -8,8 +8,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 add_executable(${PROJECT_NAME}
-    src/main.c
+    src/qwqc.c
     src/qerr.c
     src/qlex.c
+    src/qast.c
+    src/qexpr.c
 )
 target_link_libraries(${PROJECT_NAME} PRIVATE)
